--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>JavaScript - Efecto m&aacute;quina de escribir</title>
-  	<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+  	<!-- <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" href="style.css">
-  	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  	<script src="jquery.min.js"></script>
   	<script src="typed.js" type="text/javascript"></script>
   	<script type="text/javascript">
     	$(function(){
